--- a/HomeWork 1/css/style.css
+++ b/HomeWork 1/css/style.css
@@ -1,15 +1,29 @@
-body {
-    background-color: rgb(247, 247, 247);
+.article_wrapper {
+    background-color: rgb(221, 137, 221);
+}
+
+.main {
+    position: relative;
+    background-color: #ffffff;
+    width: 100%;
+    height: 100%;
 }
 
 h1 {
+    line-height: 70px;
+    text-indent: 50px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 35px;
     text-align: center;
+    padding-bottom: 40px;
     color: rgb(73, 64, 197);
 }
 
 p {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 24px;
     text-align: center;
-    color: black;
+    color: rgb(231, 48, 48);
 }
 
 .article_button1 {
@@ -30,8 +44,6 @@ p {
     outline-color: initial;
     outline-style: none;
     outline-width: initial;
-    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    filter: drop-shadow(0px 4px 2px rgba(0, 0, 0, 0.25)), drop-shadow(0px 0.545045px 1.09009px rgba(15, 86, 179, 0.2)), drop-shadow(0px 1.09009px 2.18018px rgba(15, 86, 179, 0.2));
 }
 
 .article_button2 {
@@ -55,9 +67,19 @@ p {
     outline-width: initial;
 }
 
-.full_screen_photo {
-    position: relative;
-    bottom: -100px;
-    right: -250px;
-    line-height: 1px;
+.header {
+    position: absolute;
+    width: 100px;
+    height: 50px;
+    left: 150px;
+    top: 10px;
+}
+
+.background {
+    min-height: 100%;
+    min-width: 1000px;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
